<resources>
    <string name="app_name">HomeAutomation2</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>
    <string name="restore">Restore</string>
    <string name="minimize">min</string>
    <string name="maximize">max</string>
    <string name="close">close</string>
    <string name="room_default_name">&lt;Untitled room&gt;</string>
    <string name="device_item_default_custom_name">&lt;Untitled device&gt;</string>
    <string name="laundry_time">laundry time</string>
    <string name="laundry_booking">laundry booking</string>
    <string name="laundry_bookings">laundry bookings</string>
    <string name="removed">removed</string>
    <string name="already_removed_from">already removed from</string>
    <string name="already_made">already made</string>
    <string name="created">created</string>
    <string name="calendar">calendar</string>
    <string name="from">from</string>
    <string name="to_1">to</string>
    <string name="to_2">to</string>
    <string name="for_">for</string>
    <string name="no">no</string>
    <string name="remove">remove</string>
    <string name="home">home</string>
    <string name="google_account">Google account</string>
    <string name="ping">ping %s</string>
    <string name="asus_server">ASUS server</string>
    <string name="radxa_rock_server">Radxa Rock server</string>
    <string name="show_hdmi_cec_topology">Show HDMI CEC topology</string>

    <string name="no_laundry_booking_to_remove">No laundry booking to remove</string>
    <string name="no_calendar_for_the_google_account">No calendar for the Google account %s</string>
    <string name="laundry_time_from_to">Laundry time from %s to %s</string>
    <string name="laundry_booking_already_made_for_this_point_in_time">Laundry booking already made for this point in time</string>
    <string name="laundry_booking_already_removed">Laundry booking already removed</string>
    <string name="laundry_booking_removed">Laundry booking removed</string>
    <string name="laundry_booking_created">Laundry booking created</string>

    <!-- Menu items -->
    <string name="settings">Settings</string>
    <string name="laundry_booking_label">Laundry</string>
    <string name="grocery_list_label">Grocery list</string>
    <string name="on_tv_label">On TV</string>
    <string name="spotify_player_label">Spotify</string>
    <string name="turn_off_apartment_lights">Lit down apartment</string>
    <string name="watch_todays_newscast_label">Watch today\'s newscast</string>
    <string name="play_music_video">Play music video</string>
    <string name="browse_song_on_youtube">Browse song on YouTube</string>
    <string name="browse_artist_on_youtube">Browse artist on YouTube</string>

    <!-- Month names -->
    <string name="month_1">January</string>
    <string name="month_2">February</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>
</resources>
