<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="50dp"
    android:background="@color/tabs_color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabs_color_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/bluetoothSpeakersIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/bluetoothSpeakersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/bluetoothSpeakersVolumeDownBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/volume_up"
            android:width="60dp"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/bluetoothSpeakersVolumeUpBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/volume_down"
            android:width="60dp"
            android:scaleType="fitCenter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabs_color_bg">

        <com.eriksandsten.homeautomation2.utils.CustomTooltip
            android:id="@+id/custom_tooltip1"
            android:tooltipText="Hello there folks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/tvStandbySpinner"
            android:layout_width="150dp"
            android:minWidth="150dp"
            android:paddingVertical="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_with_stroke"/>

        <Spinner
            android:id="@+id/activeHDMIChannelSpinner"
            android:layout_width="150dp"
            android:minWidth="150dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabs_color_bg">

        <ImageButton
            android:id="@+id/muteBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/mute"
            android:width="60dp"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/standbyBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/on"
            android:width="60dp"
            android:scaleType="fitCenter"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/volumeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomSlider"
            android:valueFrom="0"
            android:valueTo="100"
            android:stepSize="1" />

        <ImageButton
            android:id="@+id/turnOffApartmentLightsBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/turn_off_apartment_lights"
            android:width="60dp"
            android:scaleType="fitCenter"/>
    </LinearLayout>

</LinearLayout>
